(chore) update packages

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -59,6 +59,7 @@
     "no-negated-condition": "off",
     "no-nested-ternary": "off",
     "no-null": "off",
+    "no-shadow": "off",
     "no-ternary": "off",
     "no-unassigned-import": "off",
     "no-unnecessary-array-flat-depth": "off",
@@ -67,6 +68,7 @@
     "no-warning-comments": "off",
     "number-literal-case": "off",
     "param-names": "off",
+    "parameter-properties": "off",
     "prefer-await-to-callbacks": "off",
     "prefer-await-to-then": "off",
     "prefer-destructuring": "off",
